test/src/e2e_vm_tests/test_programs/should_pass/language/contract_caller_as_ret/src/main.sw
contract;
use std::contract_id::ContractId;

abi MyContract {
    fn test_function() -> bool;
}

impl MyContract for Contract {
    fn test_function() -> bool {
        true
    }
}

fn caller(address: ContractId) -> ContractCaller<_> {
  abi(MyContract, address.value)
}
